# villa-thalassa

./: .gitignore  README.md  Walkthrough  add_whatsapp.ps1  bathrooms.html  bedrooms.html  config.yaml  debug_gallery.html  dining.html  driveway.html  exterior.html  generate_site.py  implementation_plan.md  index.html  kitchen.html  living-room.html  organize_final.py  organize_photos.py  output1  patio.html  pricing.html  pyproject.toml  villa_thalassa_local_lifestyle.html
inputs/: channels.txt  playlists.txt  video_urls.txt
src/yt_bulk_transcripts/: __init__.py  cli.py  discover.py  extract.py  models.py  store.py  utils.py
tests/: test_discover.py  test_extract.py  test_models.py  test_store.py  test_utils.py
villaphotos/: rename_script.py
villaphotos/final/: dining_1.jpg.bak  dining_4.jpg.bak
